# cyberthreat2023

./: .coverage  .gitignore  README.md  junit.xml  memory_collection.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
cobertura/: coverage.xml
image_files/attacker/: Dockerfile
image_files/attacker/scripts/: actions.sh  cmds.py
image_files/avml/: Dockerfile
src/: memory_collection.py
src/memory_collection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
terraform/: .terraform.lock.hcl  main.tf
terraform/modules/create_avml_resources/: create_instances.tf  main.tf  variables.tf
terraform/modules/create_avml_resources/instance_startup_scripts/: install_dependencies.sh  startup_avml_instance.sh  volatility_commands.sh
terraform/modules/create_cluster/: cluster_config.tf  main.tf  network.tf  variables.tf
terraform/modules/create_resources/: main.tf  pod_config.tf  variables.tf
test-reports/: junit.xml
