; [metadata]
; name = update_secrets
; version = 1.1.0
; description = Script to run via cron on production servers which pulls and places secrets.
; author = Wasabi
; author_email = wasabi@spotify.com

; [options]
; python_requires = >=3.6

; install_requires =
;   urllib3<2 # breaking changes in urllib3 2.0.0+
;   PyYAML
;   requests
;   shumway
;   google-auth
;   google-cloud-secret-manager
;   google-cloud-iam
;   google-crc32c
;   google-api-core

; packages = find:
; package_dir =
;   =src

; [options.packages.find]
; where = src

; [options.entry_points]
; # Define the entrypoints that is used to invoke the cli, i.e.,
; #   $ myentrypoint command
; console_scripts =
;   update_secrets = update_secrets.update_secrets:main
;   update_secrets_gsm = update_secrets.update_secrets_gsm:main

